# BebopC2

./: .gitignore  README.md  setup-operator.sh  setup-teamserver.sh
beacon/: CMakeLists.txt  mingw64.cmake
beacon/include/: api_hashes.h  builtin.h  config.h  crypto.h  dynapi.h  exec.h  http.h  obf.h  obf_strings.h  protocol.h  resolve.h  session.h  shell.h  socks.h  transfer.h
beacon/src/: main.c
beacon/src/comms/: http.c  session.c  shell.c  socks.c
beacon/src/exec/: builtin.c  exec.c
beacon/src/protocol/: crypto.c  message.c
beacon/src/resolve/: dynapi.c  resolve.c
beacon/src/transfer/: transfer.c
operator-client/: go.mod  main.go
operator-client/static/css/: style.css
operator-client/static/js/: app.js
operator-client/static/pages/: build.html  (+5 more)
teamserver/: go.mod  main.go
teamserver/auth/: auth.go  auth_test.go
teamserver/builder/: builder.go  builder_test.go
teamserver/hashgen/: hashgen.go  hashgen_test.go
teamserver/models/: beacon.go  chat.go  event.go  exfil.go  listener.go  result.go  task.go  terminal.go
teamserver/obfgen/: obfgen.go  obfgen_test.go
teamserver/persist/: persist.go  persist_test.go
teamserver/protocol/: crypto.go  crypto_test.go  message.go  message_test.go  serializer.go  serializer_test.go
teamserver/server/: envelope.go  envelope_test.go  handlers.go  handlers_test.go  hub.go  listeners.go  server.go  session_listener.go  shell_handler.go  socks.go  ws_operator.go  ws_operator_test.go
teamserver/store/: sqlite.go  store.go  store_test.go
teamserver/ui/: ui.go
teamserver/version/: version.go
(+3 files in other folders)
